@@ -39,9 +39,6 @@
 #include "platform/WebRect.h"
 #include "platform/WebSize.h"
 
-#define WEBWIDGET_HAS_SETCOMPOSITORSURFACEREADY 1
-#define WEBWIDGET_HAS_PAINT_OPTIONS 1
-
 namespace WebKit {
 
 class WebInputEvent;
