@@ -1,3 +1,12 @@
+2013-01-08  James Robinson  <jamesr@chromium.org>
+
+        [chromium] Remove transitional #defines from WebKit API headers
+        https://bugs.webkit.org/show_bug.cgi?id=106381
+
+        Reviewed by Adam Barth.
+
+        * public/WebWidget.h:
+
 2013-01-08  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed.  Rolled DEPS.
