@@ -1,3 +1,12 @@
+2013-01-08  James Robinson  <jamesr@chromium.org>
+
+        [chromium] Remove transitional #defines from WebKit API headers
+        https://bugs.webkit.org/show_bug.cgi?id=106381
+
+        Reviewed by Adam Barth.
+
+        * chromium/public/WebGraphicsContext3D.h:
+
 2013-01-05  Chris Rogers  <crogers@google.com>
 
         Implement MediaStreamSource::setAudioFormat()
